--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/assets/AXlogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AthleteX Markets</title>
+    <title>AthleteX Markets - Trade the hottest topics on sports & culture</title>
   </head>
   <body>
     <div id="root"></div>
